--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 									<h2>Things I'm Good At</h2>
 									<p>Below is a list of a few of my skills and hobbies</p>
 									<ul class="feature-icons">
-										<li class="icon solid fa-code">1</li>
-										<li class="icon solid fa-cubes">2</li>
-										<li class="icon solid fa-book">3</li>
-										<li class="icon solid fa-coffee">4</li>
-										<li class="icon solid fa-bolt">5</li>
-										<li class="icon solid fa-users">6</li>
+										<li class="icon solid fa-book">MATLAB</li>
+										<li class="icon solid fa-compass">Fluent Chinese</li>
+										<li class="icon solid fa-toggle-on">LTSpice</li>
+										<li class="icon solid fa-wrench">Automobile</li>
+										<li class="icon solid fa-cubes">MS Office</li>
+										<li class="icon solid fa-map-signs">Hiking</li>
 									</ul>
 								</div>
 							</section>
@@ -77,26 +77,26 @@
 									<p>Here are some projects I have completed over the recent years. </p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="https://drive.google.com/file/d/1ej6m9MrjIPvq_zpXn8nW1_BiAbyoscL5/view?usp=sharing" target= "_blank" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Project 1</h4>
-												<p>Project 1 Description</p>
+												<h4>MIDI Controller Project</h4>
+												<p>In this project, my team utilized Arduino IDE and created a C++ program that can play notes and tune songs with the interactive buttons and tuners. <br/><br/> This connects with Ableton Live music software to allow for customization to the DJ's liking. The device is infinitely expandable with additional interactive tools. </p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="https://studio.code.org/projects/applab/0Qy5UfI4jLdM7jMx9vHuRPLVHX5sWNdSWi74FwNa1HQ" target= "_blank" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Project 2</h4>
-												<p>Project 2 Description</p>
+												<h4>Burger Shack Menu Application</h4>
+												<p>This user-friendly restaurant menu gives customers a detailed description of each item, categorized by types of food. <br/><br/> In addition, with user's input of the amount of money they wish to spend, the menu can provide efficient combinations of menu items for the customer to order. </p>
 											</div>
 										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+										<!-- <article>
+											<a href="#" target= "_blank" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Project 3</h4>
 												<p>Project 3 Description</p>
 											</div>
-										</article>
+										</article> -->
 									</div>
 								</div>
 							</section>
