--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
 									<p>Here are some projects I have completed over the recent years. </p>
 									<div class="features">
 										<article>
+											<a href="https://drive.google.com/file/d/1GGa3OkCJB3MRiGMYrXQ0yX22AUa94Qu1/view?usp=sharing" target= "_blank" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Inverse Design of DOE in 2D FDFD</h4>
+												<p>In Professor Hsu’s research lab, we focus on using modern technologies to control interactions between light and matter in complex systems. Under the guidance of Professor Chia-Wei Wade Hsu and mentor Ho-Chun Lin, I assisted in developing computational imaging methods that can reconstruct 3D images inside an opaque scattering medium that typically cannot be seen through.</p>
+											</div>
+										</article>
+										<article>
 											<a href="https://drive.google.com/file/d/1ej6m9MrjIPvq_zpXn8nW1_BiAbyoscL5/view?usp=sharing" target= "_blank" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>MIDI Controller Project</h4>
