--- a/index.html
+++ b/index.html
@@ -50,20 +50,20 @@
 									<header class="major">
 										<h2>About Me</h2>
 									</header>
-									<p>Hey! My name is Jiahuan(Henry) Zheng, and I am currently a junior student at UC Santa Barbara pursuing a Bachelors in Electrical Engineering. I love to challenge myself, learning the why and how things behave a certain way. Alongside my major, I am also pursuing a minor in Applied Psychology, applying its use of psychological methods to better resolve human challenges. <br /><br/> Apart from professional work, I enjoy fencing, computer peripherals, and modern cars. Feel free to chat with me!</p>
+									<p>Hey! My name is Jiahuan(Henry) Zheng, and I am currently a senior student at UC Santa Barbara pursuing a Bachelors in Electrical Engineering. I'm an engineer who loves to dive deep, constantly asking why and how things work, whether it's a circuit, a physical phenomenon, or a system architecture. I take pride in being detail-oriented and consistently pushing myself to learn and think critically. <br /><br/> Apart from professional work, I enjoy traveling, computer peripherals, and keeping up with modern automotive tech. Feel free to chat with me!</p>
 								</div>
 							</section>
 
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h2>Things I'm Good At</h2>
+									<h2>Skills</h2>
 									<p>Below is a list of a few of my skills and hobbies</p>
 									<ul class="feature-icons">
-										<li class="icon solid fa-book">MATLAB</li>
+										<li class="icon solid fa-book">ZenDesk</li>
 										<li class="icon solid fa-compass">Fluent Chinese</li>
 										<li class="icon solid fa-toggle-on">LTSpice</li>
-										<li class="icon solid fa-wrench">Automobile</li>
+										<li class="icon solid fa-wrench">MATLAB</li>
 										<li class="icon solid fa-cubes">MS Office</li>
 										<li class="icon solid fa-map-signs">Hiking</li>
 									</ul>
@@ -77,21 +77,28 @@
 									<p>Here are some projects I have completed over the recent years. <font color="blue">(Click the images for external links!)</font></p>
 									<div class="features">
 										<article>
-											<a href="https://drive.google.com/file/d/1GGa3OkCJB3MRiGMYrXQ0yX22AUa94Qu1/view?usp=sharing" target= "_blank" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="https://drive.google.com/file/d/1z5EtNk0xDCc4YBg4pJ9AnuiW93ad_NzD/view?usp=sharing" target= "_blank" class="image"><img src="images/ece120a.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Four-Mask NMOS Chip Fabrication</h4>
+												<p>I co-led the hands-on fabrication of a fully functional silicon chip using a four-mask NMOS process, integrating photolithography, thermal oxidation, and metal deposition to build and characterize working MOSFETs, diodes, and capacitors with precise electrical measurements.</p>
+											</div>
+										</article>
+										<article>
+											<a href="https://drive.google.com/file/d/1GGa3OkCJB3MRiGMYrXQ0yX22AUa94Qu1/view?usp=sharing" target= "_blank" class="image"><img src="images/2dfdfd.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Inverse Design of DOE in 2D FDFD</h4>
 												<p>In Professor Hsu’s research lab, we focus on using modern technologies to control interactions between light and matter in complex systems. <br/><br/> Under the guidance of Professor Chia-Wei Wade Hsu and mentor Ho-Chun Lin, I assisted in developing computational imaging methods that can reconstruct 3D images inside an opaque scattering medium that typically cannot be seen through.</p>
 											</div>
 										</article>
 										<article>
-											<a href="https://drive.google.com/file/d/1ej6m9MrjIPvq_zpXn8nW1_BiAbyoscL5/view?usp=sharing" target= "_blank" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="https://drive.google.com/file/d/1ej6m9MrjIPvq_zpXn8nW1_BiAbyoscL5/view?usp=sharing" target= "_blank" class="image"><img src="images/midi.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>MIDI Controller Project</h4>
 												<p>In this project, my team utilized Arduino IDE and created a C++ program that can play notes and tune songs with the interactive buttons and tuners. <br/><br/> This connects with Ableton Live music software to allow for customization to the DJ's liking. The device is infinitely expandable with additional interactive tools. </p>
 											</div>
 										</article>
 										<article>
-											<a href="https://studio.code.org/projects/applab/0Qy5UfI4jLdM7jMx9vHuRPLVHX5sWNdSWi74FwNa1HQ" target= "_blank" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="https://studio.code.org/projects/applab/0Qy5UfI4jLdM7jMx9vHuRPLVHX5sWNdSWi74FwNa1HQ" target= "_blank" class="image"><img src="images/burger.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Burger Shack Menu Application</h4>
 												<p>This user-friendly restaurant menu gives customers a detailed description of each item, categorized by types of food. <br/><br/> In addition, with user's input of the amount of money they wish to spend, the menu can provide efficient combinations of menu items for the customer to order. </p>
