--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
+						<li><a href="#two">Skills</a></li>
+						<li><a href="#three">Projects</a></li>
 						<li><a href="#four">Contact</a></li>
 					</ul>
 				</nav>
@@ -73,7 +73,7 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
+									<h3>Projects</h3>
 									<p>Here are some projects I have completed over the recent years. <font color="blue">(Click the images for external links!)</font></p>
 									<div class="features">
 										<article>
