--- a/index.html
+++ b/index.html
@@ -84,6 +84,13 @@
 											</div>
 										</article>
 										<article>
+											<a href="https://drive.google.com/file/d/1NtcDVa-8gOjAsOO2UqgHx-XqOi-lhWbw/view?usp=sharing" target= "_blank" class="image"><img src="images/ece120b.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>NMOS Half-Adder IC Fabrication</h4>
+												<p>Designed and fabricated an NMOS-based half-adder circuit on a silicon chip using a four-mask process, integrating transistor-level logic gates through precise photolithography, oxidation, and metallization. A hands-on experience of fully custom IC design and analysis.</p>
+											</div>
+										</article>
+										<article>
 											<a href="https://drive.google.com/file/d/1GGa3OkCJB3MRiGMYrXQ0yX22AUa94Qu1/view?usp=sharing" target= "_blank" class="image"><img src="images/2dfdfd.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Inverse Design of DOE in 2D FDFD</h4>
