--- a/index.html
+++ b/index.html
@@ -481,7 +481,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<!-- <li>&copy; All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
+								<li>&copy; All rights reserved.</li><li>Design: <a href="">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
