--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/banner.jpg" alt="" />
+									<img src="images/banner_sample.jpg" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
@@ -481,8 +481,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<!-- <li>&copy; All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
-								<li>&copy; All rights reserved.</li><li>Design: <a href="">HTML5 UP</a></li>
+								<!-- <li>&copy; All rights reserved.</li><li>Design: <a href="http://html5up.net" target= "_blank">HTML5 UP</a></li> -->
+								<li>&copy; All rights reserved.</li><li>Design: HTML5 UP</li>
 							</ul>
 						</div>
 					</section>
