--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/banner_sample.jpg" alt="" />
+									<img src="images/banner.jpg" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
@@ -61,11 +61,11 @@
 									<p>Below is a list of a few of my skills and hobbies</p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-book">ZenDesk</li>
-										<li class="icon solid fa-compass">Fluent Chinese</li>
-										<li class="icon solid fa-toggle-on">LTSpice</li>
+										<li class="icon solid fa-language">Fluent Chinese</li>
+										<li class="icon solid fa-bolt">LTSpice</li>
 										<li class="icon solid fa-wrench">MATLAB</li>
 										<li class="icon solid fa-cubes">MS Office</li>
-										<li class="icon solid fa-map-signs">Hiking</li>
+										<li class="icon solid fa-toggle-on">Laser Cutter</li>
 									</ul>
 								</div>
 							</section>
