--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 									<header class="major">
 										<h2>About Me</h2>
 									</header>
-									<p>Hey! My name is Jiahuan(Henry) Zheng, and I am currently a senior student at UC Santa Barbara pursuing a Bachelors in Electrical Engineering. I'm an engineer who loves to dive deep, constantly asking why and how things work, whether it's a circuit, a physical phenomenon, or a system architecture. I take pride in being detail-oriented and consistently pushing myself to learn and think critically. <br /><br/> Apart from professional work, I enjoy traveling, computer peripherals, and keeping up with modern automotive tech. Feel free to chat with me!</p>
+									<p>Hey! My name is Jiahuan(Henry) Zheng, currently a senior student at UC Santa Barbara pursuing a Bachelors in Electrical Engineering. I'm an engineer who loves to dive deep, constantly asking why and how things work, whether it's a circuit, a physical phenomenon, or a system architecture. I take pride in being detail-oriented and consistently pushing myself to learn and think critically. <br /><br/> Apart from professional work, I enjoy traveling, computer peripherals, and keeping up with modern automotive tech. Feel free to chat with me!</p>
 								</div>
 							</section>
 
