Update contact form with EmailJS integration and success message

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                         <div class="project-tags">
                             <span class="tag">Web App</span>
                             <span class="tag">User Interface</span>
-                            <span class="tag">Algorithm</span>
+                            <span class="tag">JavaScript</span>
                         </div>
                     </div>
                 </div>
@@ -346,12 +346,13 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <p>&copy; 2024 Henry Zheng. All rights reserved.</p>
-                <p>Designed with passion for engineering excellence</p>
+                <p>&copy; 2025 Henry Zheng. All rights reserved.</p>
             </div>
         </div>
     </footer>
 
+    <!-- EmailJS SDK -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 </html>
