--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                             <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
                         </div>
                         <div class="form-group">
-                            <div class="g-recaptcha" data-sitekey="YOUR_RECAPTCHA_SITE_KEY"></div>
+                            <div class="g-recaptcha" data-sitekey="6LeVh9orAAAAAGpCH5oZ74LRM6-vSoV0RpNzK6bP"></div>
                         </div>
                         <button type="submit" class="btn btn-primary">Send Message</button>
                     </form>
