--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                     <p>I'm always interested in new opportunities, collaborations, and interesting projects. Feel free to reach out!</p>
                     <div class="contact-methods"></div>
                     <div class="social-links">
-                        <a href="https://www.linkedin.com/in/henryzheng0/" target="_blank" class="social-link">
+                        <a href="https://www.linkedin.com/in/zhengjiahuan/" target="_blank" class="social-link">
                             <i class="fab fa-linkedin"></i>
                         </a>
                         <a href="https://github.com/henwyzheng?tab=repositories" target="_blank" class="social-link">
