contact form update

--- a/index.html
+++ b/index.html
@@ -301,12 +301,11 @@
     <section id="contact" class="contact">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title">Get In Touch</h2>
-                <p class="section-subtitle">Let's connect and discuss opportunities</p>
+                <h2 class="section-title">Contact Me</h2>
             </div>
             <div class="contact-content">
                 <div class="contact-info">
-                    <h3>Let's Start a Conversation</h3>
+                    <h3>Let's Talk</h3>
                     <p>I'm always interested in new opportunities, collaborations, and interesting projects. Feel free to reach out!</p>
                     <div class="contact-methods"></div>
                     <div class="social-links">
