RAVC and converter

--- a/index.html
+++ b/index.html
@@ -196,6 +196,48 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
+                        <img src="images/RaytheonAVC.png" alt="Raytheon Autonomous Vehicle Competition">
+                        <div class="project-overlay">
+                            <a href="https://drive.google.com/file/d/1W0GI2lAjmmKR8Aqnop1wiWpjL7bU0FY1/view?usp=sharing" target="_blank" class="project-link">
+                                <i class="fas fa-external-link-alt"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h3>Raytheon Autonomous Vehicle Competition</h3>
+                        <p>Lead electrical engineering for a 10-person team building autonomous ground and air vehicles for obstacle navigation. Architected power solutions (LiPo to DC-DC, buck converter); integrated a neuromorphic processor for low-power object detection (80% accuracy). Present weekly updates to sponsors and advise on technical standards.</p>
+                        <div class="project-tags">
+                            <span class="tag">Autonomous Systems</span>
+                            <span class="tag">Power Electronics</span>
+                            <span class="tag">Embedded</span>
+                            <span class="tag">Leadership</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="images/Converter.jpg" alt="Power Converter Project">
+                        <div class="project-overlay">
+                            <a href="#" class="project-link" aria-hidden="true">
+                                <i class="fas fa-external-link-alt"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h3>Power Converter Project</h3>
+                        <p>Designed PCB and tested a series-parallel switched-capacitor DC-DC converter with multiple voltage conversion ratios (1:2, 1:3, 2:3, 3:5, 4:5) at 10 kHz–1 MHz. Optimized topology and switching in MATLAB, achieving 92% peak efficiency.</p>
+                        <div class="project-tags">
+                            <span class="tag">Power Electronics</span>
+                            <span class="tag">PCB</span>
+                            <span class="tag">MATLAB</span>
+                            <span class="tag">Research</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-image">
                         <img src="images/ece120a.jpg" alt="Four-Mask NMOS Chip Fabrication">
                         <div class="project-overlay">
                             <a href="Files/120A_Final.pdf" target="_blank" class="project-link">
