RAVC project page, local videos, hero image; Raytheon and MIDI use local files

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     <div class="project-image">
                         <img src="images/RaytheonAVC.png" alt="Raytheon Autonomous Vehicle Competition">
                         <div class="project-overlay">
-                            <a href="https://drive.google.com/file/d/1W0GI2lAjmmKR8Aqnop1wiWpjL7bU0FY1/view?usp=sharing" target="_blank" class="project-link">
+                            <a href="ravc.html" target="_blank" class="project-link">
                                 <i class="fas fa-external-link-alt"></i>
                             </a>
                         </div>
@@ -300,7 +300,7 @@
                     <div class="project-image">
                         <img src="images/midi.jpg" alt="MIDI Controller Project">
                         <div class="project-overlay">
-                            <a href="https://drive.google.com/file/d/1ahyAuH5-7-BP51z1CM5bJWGykZb7FIYD/view?usp=sharing" target="_blank" class="project-link">
+                            <a href="Files/MIDIController.mp4" target="_blank" class="project-link">
                                 <i class="fas fa-external-link-alt"></i>
                             </a>
                         </div>
