Power Converter card links to SCConverter.png

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     <div class="project-image">
                         <img src="images/Converter.jpg" alt="Power Converter Project">
                         <div class="project-overlay">
-                            <a href="#" class="project-link" aria-hidden="true">
+                            <a href="Files/SCConverter.png" target="_blank" class="project-link">
                                 <i class="fas fa-external-link-alt"></i>
                             </a>
                         </div>
