About Me modify

--- a/index.html
+++ b/index.html
@@ -90,18 +90,19 @@
                 <div class="about-text">
                     <h3>About Henry</h3>
                     <p>
-                        I am a fourth‑year electrical engineering student at UC Santa Barbara with hands‑on experience in integrated circuit design, 
-                        power electronics, and photonics. As a Senior Student Technician, I've led technical projects, supervised over 10 employees, 
+                        I am a fourth‑year electrical engineering student at UC Santa Barbara with hands‑on experience in <b>integrated circuit design, 
+                        power electronics, and machine learning</b>. As a Senior Student Technician, I've led technical projects, supervised over 10 employees, 
                         and coordinated over 300 lecture spaces while improving troubleshooting efficiency by 50%.
                     </p>
                     <p>
-                        My research experience includes work on inverse design of diffractive optical elements and metasurfaces, where I optimized MATLAB models 
-                        based on electromagnetic theory. I've presented findings to cohorts of 50+ researchers and led weekly research meetings. 
-                        My current projects focus on switched‑capacitor DC‑DC converters, achieving 92% efficiency in power conversion.
+                        I'm currently the <b>Electrical Engineering Lead</b> for a <b>Raytheon-sponsored autonomous vehicle program</b>, building a UAV-UGV system for autonomous navigation and target identification. 
+                        I lead electrical planning for a 10-person team, set technical standards, and present weekly progress. 
+                        On the hardware side, I architected the vehicle power system (LiPo to DC-DC conversion, power distribution) and integrate AI using the <b>BrainChip Akida</b> neuromorphic processor for low-power object detection.
                     </p>
                     <p>
-                        I value rigorous design methodology, clear technical communication, and collaborative problem‑solving. 
-                        My experience spans from semiconductor fabrication to power electronics, with proficiency in MATLAB, LTSpice, KiCAD, and various hardware tools.
+                        Previously, I worked on inverse design of diffractive optical elements and metasurfaces, where I optimized MATLAB models grounded in electromagnetic theory and presented results to 50+ researchers. 
+                        My current work also includes series-parallel switched-capacitor DC-DC converters, achieving up to 92% efficiency in power conversion.
+                        Across projects, I try to be the person who turns “it should work” into <b>“it’s tested, repeatable, and ready.”</b> 
                     </p>
                     <div class="about-stats">
                         <div class="stat">
@@ -205,11 +206,11 @@
                     </div>
                     <div class="project-content">
                         <h3>Raytheon Autonomous Vehicle Competition</h3>
-                        <p>Lead electrical engineering for a 10-person team building autonomous ground and air vehicles for obstacle navigation. Architected power solutions (LiPo to DC-DC, buck converter); integrated a neuromorphic processor for low-power object detection (80% accuracy). Present weekly updates to sponsors and advise on technical standards.</p>
+                        <p>Lead electrical engineering for a 10-person team building autonomous ground and air vehicles for obstacle navigation. Architected power solutions (LiPo to DC-DC, buck converter); integrated a neuromorphic processor for low-power object detection (80% accuracy). 
+                            Present weekly updates to sponsors and advise on technical standards.</p>
                         <div class="project-tags">
                             <span class="tag">Autonomous Systems</span>
                             <span class="tag">Power Electronics</span>
-                            <span class="tag">Embedded</span>
                             <span class="tag">Leadership</span>
                         </div>
                     </div>
