--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
     </section>
 
     <!-- About Section -->
-    <section id="about" class="about">
+    <section class="about">
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">About Me</h2>
                 <p class="section-subtitle">Get to know me better</p>
             </div>
-            <div class="about-content">
+            <div id="about" class="about-content">
                 <div class="about-text">
                     <h3>About Henry</h3>
                     <p>
